--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -51,6 +51,25 @@ body {
         align-items: center;
         justify-content: space-between;
     }
+
+    &__error-info{
+        margin: 80px auto;
+        width: 500px;
+        text-align: center;
+
+        h2 {
+            font-size: 36px;
+            font-weight: 700;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 20px;
+            line-height: 145.4%;
+            letter-spacing: 0.01em;
+            color: #777777;
+        }
+    }
 }
 
 .container {
