Adaptive and additional styles

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .root {
     position: relative;
-    left: -120px;
+    max-width: 320px;
 }
 
 .input {
@@ -8,7 +8,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 12px 20px;
     padding-left: 42px;
-    width: 400px;
+    width: 100%;
     border-radius: 10px;
     font-size: 16px;
 
