--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,32 +1,49 @@
-@import '../variables';
+@import "../variables";
 
 .header {
-  border-bottom: 1px solid $gray-line;
-  padding: 40px 0;
+    border-bottom: 1px solid $gray-line;
+    padding: 40px 0;
 
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-  &__logo {
-    display: flex;
-
-    img {
-      margin-right: 15px;
+        @media (max-width: 900px) {
+            flex-direction: column;
+            gap: 30px;
+        }
     }
 
-    h1 {
-      color: #181818;
-      font-size: 24px;
-      letter-spacing: 1%;
-      text-transform: uppercase;
-      font-weight: 800;
+    &__mobile-nav {
+        display: none;
+        @media (max-width: 1024px) {
+            display: block;
+        }
     }
 
-    p {
-      color: #7b7b7b;
+    &__mobile-nav-btn {
+        background-color: transparent;
+        border: none;
     }
-  }
+
+    &__logo {
+        display: flex;
+
+        img {
+            margin-right: 15px;
+        }
+
+        h1 {
+            color: #181818;
+            font-size: 24px;
+            letter-spacing: 1%;
+            text-transform: uppercase;
+            font-weight: 800;
+        }
+
+        p {
+            color: #7b7b7b;
+        }
+    }
 }
